--- a/src/views/components/model-tabs.pug
+++ b/src/views/components/model-tabs.pug
@@ -1,6 +1,12 @@
 mixin model-tabs 
-  .model-tabs(class=attributes.class data-tabs='')
-    each item, index in attributes.items
-      .model-tabs__item(class=(index === 0 ? 'active' : '') data-tabs-item='')
-        |#{item}
+  if (attributes.real)
+    .model-tabs(class=attributes.class data-real-tabs='')
+      each item, index in attributes.items
+        .model-tabs__item(class=(index === 0 ? 'active' : '') data-tabs-item='')
+          |#{item}
+  else
+    .model-tabs(class=attributes.class data-tabs='')
+      each item, index in attributes.items
+        .model-tabs__item(class=(index === 0 ? 'active' : '') data-tabs-item='')
+          |#{item}
     
