--- a/src/assets/styles/modules/form.scss
+++ b/src/assets/styles/modules/form.scss
@@ -27,6 +27,9 @@
 
   &__input {
     padding: 15px 12px;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 10px 12px;
+    }
     width: 100%;
 
     background: $color-white;
