--- a/src/views/components/tabs.pug
+++ b/src/views/components/tabs.pug
@@ -1,5 +1,11 @@
 mixin tabs 
-  .tabs(class=attributes.class data-tabs='')
-    each item, i in attributes.tabs 
-      .tabs__item(class=(i === 0 ? 'active' : '') data-tabs-item='')
-        |#{item}
+  if (attributes.real)
+    .tabs(class=attributes.class data-real-tabs='')
+      each item, i in attributes.tabs 
+        .tabs__item(class=(i === 0 ? 'active' : '') data-tabs-item='')
+          |#{item}
+  else 
+    .tabs(class=attributes.class data-tabs='')
+      each item, i in attributes.tabs 
+        .tabs__item(class=(i === 0 ? 'active' : '') data-tabs-item='')
+          |#{item}
