--- a/src/views/pages/booking-2.pug
+++ b/src/views/pages/booking-2.pug
@@ -40,10 +40,14 @@ block content
                               |Артикул: 9353014BTC
                       .cart-page__item-col 
                         .cart-page__item-container 
+                          .cart-page__item-caption 
+                            |цена
                           .booking-page__product-text 
                             |12 шт.
                       .cart-page__item-col
                         .cart-page__item-container 
+                          .cart-page__item-caption 
+                            |цена
                           .tooltip
                             .cart-page__item-price.tooltip__row
                               |€ 93.42
@@ -54,6 +58,8 @@ block content
                               |Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur deserunt cumque?
                       .cart-page__item-col
                         .cart-page__item-container
+                          .cart-page__item-caption 
+                            |цена
                           .cart-page__item-price 
                             |€ 1279.2
           .booking-page__product-col
@@ -68,7 +74,7 @@ block content
                       |89 0000
                 .cart-page__card-caption 
                   |Цена с НДС по курсу ЦА на 25.06.2021
-                .cart-page__card-row.booking-page__card-inner
+                .booking-page__card-row.booking-page__card-inner
                   .cart-page__card-col
                     .booking-page__card-text 
                       |Доставка
