--- a/src/views/pages/cart-1.pug
+++ b/src/views/pages/cart-1.pug
@@ -7,7 +7,17 @@ block content
   .cart-page 
     section.section.section--first 
       .container 
-        +navigation(page='Корзина')
+        ul.breadcrumbs 
+          li.breadcrumbs__item 
+            a.breadcrumbs__link(href="#") 
+              |Главная
+          li.breadcrumbs__item 
+            .breadcrumbs__text 
+              |Корзина
+        .cart-page__icon 
+          +cart-empty-svg.cart-page__icon-svg.mobile
+        h1.nav-title
+          |Ваша корзина пуста
     section.section.section--last
-      .cart-page__icon
-        +cart-empty-svg
+      .cart-page__icon 
+        +cart-empty-svg.desktop
