--- a/src/assets/styles/pages/cart-page.scss
+++ b/src/assets/styles/pages/cart-page.scss
@@ -27,6 +27,10 @@
     }
   }
 
+  &__loyalty {
+    
+  }
+
   &__counter {
     @media (max-width: ($breakpoint - 1px)) {
       width: 124px;
@@ -53,6 +57,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @media (max-width: ($breakpoint - 1px)) {
+      margin: 20px 0 24px;
+      justify-content: flex-start;
+    }
+  }
+  &__icon-svg {
+    --size: 80px;
+
+    @media (max-width: ($breakpoint - 1px)) {
+      width: var(--size);
+      height: var(--size);
+    }
   }
 
   &__card {
