Update services mobile

--- a/src/views/pages/services-detail.pug
+++ b/src/views/pages/services-detail.pug
@@ -10,24 +10,21 @@ block content
         +navigation(items = ['Услуги'] page='Подбор инструмента')
     section.section.section--last
       .container 
-        .row 
-          .row__col
-            +tabs.tabs--column(tabs = ['Подбор инструмента', 'Ленточные пилы', 'Сервис', 'Инжиниринг', 'Обучение', 'Лизинг'])
-          .row__col
-            h2.services-page__title 
-              |Высококвалифицированные консультации по подбору инструмента
+        .services-page__section
+          h2.services-page__title 
+            |Высококвалифицированные консультации по подбору инструмента
+          .services-page__image.margin-top
+            img(src="assets/images/service-detail-1.jpg", alt="")
+          .section
+            p.services-page__text 
+              |От правильного подбора инструмента напрямую зависит эффективность и продуктивность использования оборудования. Специалисты нашей компании проконсультируют Вас по подбору и использованию вспомогательного инструмента и оснастки, дадут профессиональные рекомендации по внедрению инструмента на производство.
+          .section
             .services-page__image.margin-top
-              img(src="assets/images/service-detail-1.jpg", alt="")
-            .section
-              p.services-page__text 
-                |От правильного подбора инструмента напрямую зависит эффективность и продуктивность использования оборудования. Специалисты нашей компании проконсультируют Вас по подбору и использованию вспомогательного инструмента и оснастки, дадут профессиональные рекомендации по внедрению инструмента на производство.
-            .section
-              .services-page__image.margin-top
-                img(src="assets/images/service-detail-2.jpg", alt="")
-            .section 
-              h2.services-page__title 
-                |Мы предлагаем следующий #[br] инструментальный ряд:
-              ul.features-list.margin-top.margin-top--md
-                each item in ['Токарный и фрезерный корпусный инструмент;', 'Сменные пластины, алмазные пластины;', 'Осевой инструмент (фрезы и сверла из твердого сплава и быстрорежущей стали);', 'Инструмент для резьбонарезания (метчики, раскатники, резьбофрезы, плашки и центровочные сверла);', 'Вспомогательный инструмент для станков с ЧПУ;', 'Вспомогательный инструмент к фрезерным станкам с ЧПУ;', 'Патроны токарные гидравлические фирмы AUTOSTRONG;', 'Шкафы и тумбочки для оснастки;', 'Прецизионные тиски для станов с ЧПУ фирмы HOMGE;', 'Станки для заточки свёрл и фрез.']
-                  li.features-list__item
-                    |#{item}
+              img(src="assets/images/service-detail-2.jpg", alt="")
+          .section 
+            h2.services-page__title 
+              |Мы предлагаем следующий #[br] инструментальный ряд:
+            ul.features-list.margin-top.margin-top--md
+              each item in ['Токарный и фрезерный корпусный инструмент;', 'Сменные пластины, алмазные пластины;', 'Осевой инструмент (фрезы и сверла из твердого сплава и быстрорежущей стали);', 'Инструмент для резьбонарезания (метчики, раскатники, резьбофрезы, плашки и центровочные сверла);', 'Вспомогательный инструмент для станков с ЧПУ;', 'Вспомогательный инструмент к фрезерным станкам с ЧПУ;', 'Патроны токарные гидравлические фирмы AUTOSTRONG;', 'Шкафы и тумбочки для оснастки;', 'Прецизионные тиски для станов с ЧПУ фирмы HOMGE;', 'Станки для заточки свёрл и фрез.']
+                li.features-list__item
+                  |#{item}
