--- a/src/assets/styles/pages/services-page.scss
+++ b/src/assets/styles/pages/services-page.scss
@@ -1,6 +1,9 @@
 .services-page {
 
   &__card {
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 8px 12px 8px 8px;
+    }
     display: block;
 
     border-radius: 4px;
@@ -15,11 +18,18 @@
     flex-shrink: 0;
     &:nth-child(1) {
       width: calc(#{$col-part-d} * 2 - #{$col-gap-d});
+      @media (max-width: ($breakpoint - 1px)) {
+        width: calc(#{$col-width-m});
+      }
     }
     &:nth-child(2) {
       position: relative;
       z-index: 0;
       width: calc(#{$col-part-d} * 4 - #{$col-gap-d});
+      @media (max-width: ($breakpoint - 1px)) {
+        flex-shrink: 1;
+        width: auto;
+      }
     }
   }
   &__card-image {
@@ -31,32 +41,65 @@
   }
   &__card-container {
     padding: 18px 18px 18px 0;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 0;
+      margin-left: 12px;
+    }
   }
   &__card-title {
     margin-bottom: 12px;
     @include fsl(18px, 120%);
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-bottom: 4px;
+      @include fsl(13px, 120%);
+    }
     font-weight: 500;
   }
   &__card-text {
     @include fsl(14px, 140%);
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(10px, 140%);
+    }
   }
   &__card-icon {
+    --pad: 14px;
+    @media (max-width: ($breakpoint - 1px)) {
+      --pad: 0;
+    }
+
     position: absolute;
-    bottom: 14px;
-    right: 14px;
+    bottom: var(--pad);
+    @media (max-width: ($breakpoint - 1px)) {
+      bottom: auto;
+      top: var(--pad);
+    }
+    right: var(--pad);
 
     display: flex;
     align-items: center;
     justify-content: center;
   }
   &__card-svg {
+    width: 14px;
+    height: 15px;
+
     path {
       stroke: $color-black;
+    }
+  }
+  
+  &__section {
+    width: calc(#{$col-part-d} * 8 - #{$col-gap-d});
+    @media (max-width: ($breakpoint - 1px)) {
+      width: 100%;
     }
   }
 
   &__title {
     max-width: calc(#{$col-part-d} * 6 - #{$col-gap-d});
+    @media (max-width: ($breakpoint - 1px)) {
+      max-width: none;
+    }
   }
 
   &__image {
@@ -66,5 +109,4 @@
     border-radius: 4px;
     overflow: hidden;
   }
-
 }
