--- a/src/assets/styles/modules/accordion.scss
+++ b/src/assets/styles/modules/accordion.scss
@@ -2,6 +2,9 @@
   $comp: &;
 
   padding: 0 20px;
+  @media (max-width: ($breakpoint - 1px)) {
+    padding: 0;
+  }
 
   border-radius: 4px;
   border: 1px solid transparent;
@@ -9,45 +12,64 @@
   transition: $transition;
 
   &.active {
-    border-color: $color-light-gray;
+    border-color: $color-blue;
 
     #{$comp}__icon {
       transform: rotate(180deg);
     }
-    #{$comp}__svg {
-      path {
-        stroke: $color-blue;
-      }
-    }
+    // #{$comp}__svg {
+    //   path {
+    //     stroke: $color-blue;
+    //   }
+    // }
   }
 
   &__head {
     padding: 20px 0;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 12px;
+    }
     cursor: pointer;
   }
 
   &__row {
     display: flex;
     align-items: center;
+    @media (max-width: ($breakpoint - 1px)) {
+      justify-content: space-between;
+    }
   }
 
   &__col {
     flex-shrink: 0;
     width: calc(#{$col-part-d} * 2);
-    
+    @media (max-width: ($breakpoint - 1px)) {
+      display: none;
+    }
+
     &:nth-child(1) {
       width: calc(#{$col-part-d} * 2 - 20px);
+      @media (max-width: ($breakpoint - 1px)) {
+        width: auto;
+        display: block;
+      }
     }
     &:nth-child(4) {
       display: flex;
       align-items: center;
       justify-content: space-between;
       width: calc(#{$col-part-d} * 2 - #{$col-gap-d} - 20px);
+      @media (max-width: ($breakpoint - 1px)) {
+        width: auto;
+      }
     }
   }
 
   &__text {
     @include fsl(14px, 140%);
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(12px, 140%);
+    }
   }
   
   &__icon {
@@ -62,20 +84,33 @@
 
   &__body {
     padding: 20px 0;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 12px 0;
+    }
     display: none;
   }
 
   &__item {
     display: flex;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding-right: 12px;
+      display: block;
+    }
     justify-content: space-between;
 
     &:not(:first-child) {
       margin-top: 8px;
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 16px;
+      }
     }
   }
 
   &__image {
     max-width: 120px;
+    @media (max-width: ($breakpoint - 1px)) {
+      max-width: calc(#{$col-width-m});
+    }
     display: flex;
     align-items: flex-start;
   }
@@ -83,6 +118,10 @@
   &__content {
     padding: 20px 0;
     margin-left: 40px;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 0;
+      margin-left: 7px;
+    }
   }
   &__content-col {
     flex-shrink: 0;
@@ -90,11 +129,18 @@
     &:nth-child(1) {
       display: flex;
       width: calc(#{$col-part-d} * 5 - 20px);
+      @media (max-width: ($breakpoint - 1px)) {
+        width: 100%;
+      }
     }
     &:nth-child(2) {
       padding: 20px 36px 20px 0;
-
       width: calc(#{$col-part-d} * 2 - 20px - #{$col-gap-d});
+      @media (max-width: ($breakpoint - 1px)) {
+        padding: 8px 0 0;
+        width: 100%;
+        justify-content: flex-start;
+      }
       display: flex;
       justify-content: space-between;
     }
@@ -112,5 +158,35 @@
     &:not(:last-child) {
       margin-bottom: 4px;
     }
+  }
+
+  &__price {
+    @media (max-width: ($breakpoint - 1px)) {
+      padding-left: calc(#{$col-part-m});
+      margin-right: 53px;
+    }
+
+    font-weight: 500;
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(14px, 110%);
+    }
+  }
+
+  &__grid {
+    display: none;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 0 12px 12px;
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      row-gap: 12px;
+    }
+  }
+
+  &__caption {
+    margin-bottom: 2px;
+
+    color: $color-gray;
+    text-transform: uppercase;
+    @include fsl(10px, 120%);
   }
 }
