--- a/src/assets/styles/modules/tabs.scss
+++ b/src/assets/styles/modules/tabs.scss
@@ -13,31 +13,60 @@
 
   &--column {
     flex-direction: column;
+    @media (max-width: ($breakpoint - 1px)) {
+      flex-direction: row;
+    }
 
     background: transparent;
 
     #{$comp}__item {
       padding: 20px;
+      @media (max-width: ($breakpoint - 1px)) {
+        padding: 9px 11px;
+      }
       background: $color-white;
       
       &:not(:first-child) {
         margin-top: 4px;
+        @media (max-width: ($breakpoint - 1px)) {
+          margin-top: 0;
+          margin-left: 8px;
+        }
       }
- 
+
       &.active {
         background: $color-blue;
       }
     }
   }
 
+  &--responsive {
+    @media (max-width: ($breakpoint - 1px)) {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    #{$comp}__item {
+      @media (max-width: ($breakpoint - 1px)) {
+        text-align: center;
+      }
+    }
+  }
+
   &__item {
     padding: 14px 24px;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 7px 12px;
+    }
 
     transition: $transition;
     border-radius: 4px;
     cursor: pointer;
     font-weight: 500;
     white-space: nowrap;
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(12px, 140%);
+    }
 
     &.active {
       background: $color-blue;
